a few components in place

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
-    <title>Invite Education | Mobile and online tools for college savings, college planning, financial literacy and career planning.</title>
+    <title>Invite Education | College Planning</title>
 
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/ico" />
     
@@ -63,7 +63,9 @@
                 <div class="passport">
 
                     <div class="header">
-                        Passport For Success
+                        <h2>
+                            Passport For Success
+                        </h2>
                     </div>
 
                     <div class="step">
@@ -100,6 +102,11 @@
                     <h1>
                         Find a College
                     </h1>
+                </div>
+
+                <div class="welcomeVideo">
+                    <iframe width="560" height="315" src="//www.youtube.com/embed/jkrNitBa0jE" frameborder="0" allowfullscreen>
+                    </iframe>
                 </div>
 
             </div>
